# pipe

./: .coverage  .env.default  .gitignore  .prettierrc.json  CAMELCASE_MIGRATION.md  Dockerfile.python  Dockerfile.storybook  Dockerfile.web  IMPROVEMENT_PROPOSAL_serialization_hints.md  LICENSE.md  README.md  app.py  build_output.txt  commit_message.txt  conductor.py  debug_mcp.py  docker-compose.yml  eslint.config.js  eslint_output.txt  eslint_report.json  files_to_delete.txt  gemini_api.py  gemini_cli_py.py  genai_example.py  mcp_server.py  openapi.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  sealed.txt  session_stats_all.json  session_stats_filtered.json  setting.default.yml  setting.yml  takt.py  temp_commit_message.txt  test_compress_action.py  test_create_verified_summary.py  (+6 more)
.gemini/: settings.json
.pipe_sessions/: 211b0a48f4a8f31a6990becd7780ee7fb480cafeca532892e3fd31a49d9ad7d2_serial_result.json  211b0a48f4a8f31a6990becd7780ee7fb480cafeca532892e3fd31a49d9ad7d2_tasks.json  6f6988d2d5c2bd3eb38c2b96a429d4c7cebce6628b8649a3ff8e446da376d60f_serial_result.json  6f6988d2d5c2bd3eb38c2b96a429d4c7cebce6628b8649a3ff8e446da376d60f_tasks.json  825689441f3aa80573139c510507d6a5580d6b366a6d0f37de9de553ef24df50_serial_result.json  825689441f3aa80573139c510507d6a5580d6b366a6d0f37de9de553ef24df50_tasks.json  d970d00415f73dfcbd5d3e5c972d448994154b860028082834eb7cc9ce59f5a4_serial_result.json  d970d00415f73dfcbd5d3e5c972d448994154b860028082834eb7cc9ce59f5a4_tasks.json  de144b4c8f107a422a779d897bc39ef18299ccc5c1f7f59a7e323f39656a04ac_serial_result.json  de144b4c8f107a422a779d897bc39ef18299ccc5c1f7f59a7e323f39656a04ac_tasks.json  fddd1fb336170e806744be4cdbd313b3d467d0a0b3ac722def26b52bc0909862_serial_result.json  fddd1fb336170e806744be4cdbd313b3d467d0a0b3ac722def26b52bc0909862_tasks.json
.storybook/: main.ts  preview.ts
assets/css/: style.css
assets/js/: main.js
docker/: Dockerfile.python  Dockerfile.react  Dockerfile.storybook  Dockerfile.web  entrypoint.sh
docs/: agent-registry.md  development.md  dry-run-sample.json  extending.md  gemini-api-structure.md  setup.md  tools.md
docs/reviews/: lifecycle_review_report.md
eslint-rules/: no-snake-case-properties.js  vanilla-extract-recess-order.js
procedures/: python_unit_test_conductor.md  python_unit_test_generation.md  reversi_game.md  typescript_storybook_conductor.md  typescript_test_conductor.md
roles/: analyzer.md  compresser.md  compressor.md  conductor.md  doctor.md  engineer.md  reviewer.md  therapist.md  tool_maker.md  verifier.md
roles/games/: reversi_player.md
roles/python/: README.md  craftsman.md  developer.md  python.md  web.md
roles/typescript/: README.md  api.md  rhf.md  stores.md  typescript.md
rules/: multi-step-reasoning.md
scripts/: README.md  check-hooks.js  commit.py  extract_session_stats.py
scripts/analyze/: analyze_sessions.py
scripts/python/: validate_code.sh
scripts/typescript/: unit_test.sh  validate_code.sh
sessions/: index.json  pending_turns.json  test_session.json
sessions/backups/: 004915fd2e3cf7a274a3b90dd13938a067e162d54528205ee0b609bcefbdeb28-2025-10-28T170906.556270+0900.json  0094f74eb1ea8af28ed9715ac74b6070d2770338787221935cf7e9a3ef73ca1b-2025-10-28T190926.481921+0900.json  00b8b6d052a3be45d204efc38c1125c6ed1e004cebba2294e7277aaa948b2cc2-20251024004316.json  00b8b6d052a3be45d204efc38c1125c6ed1e004cebba2294e7277aaa948b2cc2__c81b635c36f7ba27705ff9d29f0b4bf63cf5856c1e9c182d82ecf6dd6a5ef04c-20251024040444.json  01980250fe01edbd94675bc8644a27e6d18ac14d0473a1902ac57501a6951056-2025-10-28T164348.075822+0900.json  048e488fcf2ad39cedaa2b62ed1254fca3828ddd623cb15af20135ae5a58dcaa-2025-10-29T074510.258502+0900.json  067067a27c6d184f9b32c805904718aa547ea4f3e8671ff04ca1e4616104a401-20251025152816.json  067067a27c6d184f9b32c805904718aa547ea4f3e8671ff04ca1e4616104a401-20251025153541.json  067067a27c6d184f9b32c805904718aa547ea4f3e8671ff04ca1e4616104a401-20251025153554.json  07214afa1b860915998725669bffeece9830119aa8d3363949bc8accc55aba0e-2025-10-28T184928.786695+0900.json  07364a20626080b55f9707801df1d261e4a69b3225c128165e64a91931a1f25b-2025-10-28T190926.480796+0900.json  087669c6416fbc0fece283acc21a847ecdfc026cb6ef769b9d1aa462181c0daf-2025-10-28T163722.984949+0900.json  089169d1f77e821d9263f4403f695b73699383ab6063d4d2aae8bea8fd261ba1-20251025122558.json  0a5b3b65b8c9b0af8d38f976f1bfd6aa7ed4be4230ed1b1dab3224a0bba9e53c-2025-10-28T164240.679263+0900.json  0cda0fd01659652e245f9c66d18db5e847eb5a35d6d0e8f32c2c05faaed42065-2025-10-28T171359.045323+0900.json  0daf908a3282afca0b49af4fe7b1ff8cee677630ff4670826dd71509b1110eaa-2025-10-28T153647.454868+0900.json  0daf908a3282afca0b49af4fe7b1ff8cee677630ff4670826dd71509b1110eaa-2025-10-28T160154.486919+0900.json  (+323 more)
src/: __init__.py  dispatcher.py  gemini_api.py  gemini_cli.py  history_manager.py  prompt_builder.py  search_agent.py  session_manager.py  token_manager.py  utils.py
src/delegates/: dry_run_delegate.py  gemini_api_delegate.py  (+1 more)
templates/: new_session.html
tests/: __init__.py  conftest.py  test_history_manager.py  test_prompt_builder.py
tools/: __init__.py  create_verified_summary.py  delete_session.py  delete_todos.py  edit_todos.py  glob.py  google_web_search.py  list_directory.py  read_file.py  read_many_files.py  read_session_turns.py  replace.py  replace_session_turns.py  run_shell_command.py  save_memory.py  search_file_content.py  verify_summary.py  web_fetch.py  write_file.py
whoosh_index/: _MAIN_1.toc
(+1518 files in other folders)
