[project]
name = "pipe"
version = "0.1.0"
description = "A task-oriented chat agent for context engineering."
dependencies = [
    "PyYAML==6.0.3",
    "python-dotenv==1.1.1",
    "Flask==3.1.2",
    "cryptography==46.0.2",
    "json5==0.9.25",
    "pydantic==2.6.4",
    "beautifulsoup4==4.12.3",
    "httpx<1.0.0,>=0.28.1",
    "pygls==1.3.0"
]

[project.scripts]
takt = "pipe.cli.takt:main"

[tool.setuptools.packages.find]
include = ["pipe*", "tests*"]
where = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:Field name .* shadows an attribute in parent .*Operation.*:UserWarning",
    "ignore:Field name \"name\" shadows an attribute in parent \"Operation\".*:UserWarning",
    "ignore:Field name \"metadata\" shadows an attribute in parent \"Operation\".*:UserWarning",
    "ignore:Field name \"done\" shadows an attribute in parent \"Operation\".*:UserWarning",
    "ignore:Field name \"error\" shadows an attribute in parent \"Operation\".*:UserWarning",
]
addopts = "--cov=src/pipe --cov-report=term-missing --cov-report=html"

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
]
dev = [
    "ruff==0.5.5",
    "mypy==1.11.0",
    "types-PyYAML",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

