[tool.poetry]
name = "pipe"
version = "0.6.0"
description = "A task-oriented chat agent for context engineering."
authors = ["s-age <s-age@example.com>"]
license = "CC0-1.0"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
PyYAML = "6.0.3"
python-dotenv = "1.1.1"
Flask = "3.1.2"
cryptography = "46.0.2"
json5 = "0.9.25"
pydantic = "^2.12.5"
beautifulsoup4 = "4.12.3"
httpx = "^0.28.1"
pygls = "1.3.0"
Flask-CORS = "4.0.1"
watchdog = "4.0.1"
Whoosh = "2.7.4"
pathspec = "0.12.1"
google-genai = "^1.52.0"
psutil = "^6.1.1"

[tool.poetry.scripts]
takt = "pipe.cli.takt:main"
mcp_server = "pipe.cli.mcp_server:main"

[tool.poetry.group.test.dependencies]
pytest = "8.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "0.5.5"
mypy = "1.13.0"
types-PyYAML = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:Field name .* shadows an attribute in parent .*Operation.*:UserWarning",
    "ignore:Field name \"name\" shadows an attribute in parent \"Operation\".*:UserWarning",
    "ignore:Field name \"metadata\" shadows an attribute in parent \"Operation\".*:UserWarning",
    "ignore:Field name \"done\" shadows an attribute in parent \"Operation\".*:UserWarning",
    "ignore:Field name \"error\" shadows an attribute in parent \"Operation\".*:UserWarning",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true

